--- a/index.html
+++ b/index.html
@@ -32,31 +32,31 @@
             <h1 class="hero-title"><span class="accent">Сучасна</span>пекарня</h1>
         </section>
         <!--+ Traditions section -->
-        <section id="traditions-section">
+        <section id="tradition-section">
             <ul class="advantages-list">
-                <li>Великий попит на ринку</li>
-                <li>Доступні за бюджетом формати</li>
-                <li>Досвідчена управлінська команда</li>
+                <li class="advantages-item">Великий попит на ринку</li>
+                <li class="advantages-item">Доступні за бюджетом формати</li>
+                <li class="advantages-item">Досвідчена управлінська команда</li>
             </ul>
             <h2 class="section-title">Новий формат традицій</h2>
-            <p>
-                <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та натуральність інгредієнтів.
+            <p class="traditions-text">
+                <span class="brand uppercase">shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та натуральність інгредієнтів.
             </p>
-            <p>
+            <p class="traditions-text">
                 Ми працюємо як найвідоміші мережі—
-                <span>5 хвилин і замовлення готове.</span>
+                <span class="brand">5 хвилин і замовлення готове.</span>
                 А ще у наших пекарень стильний дизайн
                 та висока якість обслуговування!
             </p>
             <img src="./images/baker-man.jpg" alt="Чоловік пекар">
         </section>
-        <!--+ Cookers section -->
+        <!--+ Chefs section -->
         <section id="chefs-section">
             <h2 class="section-title">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
             <ul>
                 <li>
                     <article>
-                        <h3>Настя</h3>
+                        <h3 class="chefs-title">Настя</h3>
                         <p>Привіт, я Настя! </p>
                         <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
                         <p>Я випічу для васнайсмачніщі вироби!</p>
@@ -64,7 +64,7 @@
                 </li>
                 <li>
                     <article>
-                        <h3>Влад</h3>
+                        <h3 class="chefs-title">Влад</h3>
                         <p>Привіт, я Влад!</p>
                         <p>Мій кондитерський стаж вже 18 років. SHOP BEKERY - це наша любов, з якою ми ділимось кожен раз з Вами через нашу випічку!</p>
                         <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
@@ -78,17 +78,35 @@
             <ul>
                 <li>
                     <article>
-                        <h3 lang="uk">Walrus</h3>
+                        <h3 class="format-title" lang="uk">Walrus</h3>
+                        <div class="format-text">
+                            <p>Площа: до 120 м2</p>
+                            <p>Меню: розширене меню</p>
+                            <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти-різнороби</p>
+                            <p>Посадкові місця: є</p>
+                        </div>
                     </article>
                 </li>
                 <li>
                     <article>
-                        <h3 lang="uk">Horseshoe</h3>
+                        <h3 class="format-title" lang="uk">Horseshoe</h3>
+                        <div class="format-text">
+                            <p>Площа: до 25 м2</p>
+                            <p>Меню: найпопулярніші позиції меню</p>
+                            <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                            <p>Посадкові місця: відсутні</p>
+                        </div>
                     </article>
                 </li>
                 <li>
                     <article>
-                        <h3 lang="uk">Handlebar</h3>
+                        <h3 class="format-title" lang="uk">Handlebar</h3>
+                        <div class="format-text">
+                            <p>Площа: до 15 м2</p>
+                            <p>Меню: найпопулярніші позиції меню</p>
+                            <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                            <p>Посадкові місця: відсутні </p>
+                        </div>
                     </article>
                 </li>
             </ul>
@@ -96,6 +114,7 @@
         <!--+ Contact-section -->
         <section id="contact-section">
             <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
+            <p>Заповни форму, щоб ми зв'язались з тобою!</p>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d635.0407286785055!2d30.4908517!3d50.4566909!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1698992627410!5m2!1sru!2sua"
                 width="603" height="595" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -108,17 +127,23 @@
                 <img src="./images/logo.svg" alt="Логотип сучасної пекарні">
             </a>
             <ul>
-                <li><a href="#">Наші традиції</a></li>
-                <li><a href="#">Шеф-кухарі</a></li>
-                <li><a href="#">Формати</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li><a class="link" href="#">Наші традиції</a></li>
+                <li><a class="link" href="#">Шеф-кухарі</a></li>
+                <li><a class="link" href="#">Формати</a></li>
+                <li><a class="link" href="#">Контакти</a></li>
             </ul>
         </nav>
         <address>
             <ul>
-                <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
-                <li><a href="http://mail:shopbakery@gmail.com">shopbakery@gmail.com</a></li>
-                <li><a href="https://maps.app.goo.gl/bPc5MmLapzG13TuP6" target="_blank">Україна, м. Київ, вул. Січових Стрільців 54</a></li>
+                <li>
+                    <a class="address-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a>
+                </li>
+                <li>
+                    <a class="address-link" href="http://mail:shopbakery@gmail.com">shopbakery@gmail.com</a>
+                </li>
+                <li>
+                    <a class="address-link" href="https://maps.app.goo.gl/bPc5MmLapzG13TuP6" target="_blank">Україна, м. Київ, вул. Січових Стрільців 54</a>
+                </li>
                 <li>
                     <a href="#">
                         <img src="#" alt="facebook-icon">
@@ -130,8 +155,8 @@
                     </a>
                 </li>
             </ul>
-            <a href="#" target="_blank">Політика конфіденційності</a>
-            <p>&copy; 2022 Дані захищені</p>
+            <a class="address-link" href="#" target="_blank">Політика конфіденційності</a>
+            <p class="address-copyright">&copy; 2022 Дані захищені</p>
         </address>
     </footer>
 </body>
