--- a/index.html
+++ b/index.html
@@ -12,152 +12,189 @@
 
 <body>
     <!--+ Header -->
-    <header>
-        <nav>
-            <a href="/">
-                <img src="./images/logo.svg" alt="Логотип сучасної пекарні">
-            </a>
-            <ul>
-                <li><a class="link" href="#traditions-section">Наші традиції</a></li>
-                <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
-                <li><a class="link" href="#formats-section">Формати</a></li>
-                <li><a class="link" href="#contact-section">Контакти</a></li>
-            </ul>
-        </nav>
-        <button class="button" type="button">Замовити дзвінок</button>
+    <header class="header">
+        <div class="container">
+            <div class="header-container">
+                <nav class="header-nav">
+                    <a href="/">
+                        <img src="./images/logo.svg" alt="Логотип сучасної пекарні">
+                    </a>
+                    <ul class="header-menu">
+                        <li><a class="link" href="#traditions-section">Наші традиції</a></li>
+                        <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
+                        <li><a class="link" href="#formats-section">Формати</a></li>
+                        <li><a class="link" href="#contact-section">Контакти</a></li>
+                    </ul>
+                </nav>
+                <button class="button" type="button">Замовити дзвінок</button>
+            </div>
+        </div>
     </header>
     <main>
         <!--+ Hero section -->
-        <section>
-            <h1 class="hero-title"><span class="accent">Сучасна</span>пекарня</h1>
+        <section class="hero-section">
+            <div class="container">
+                <h1 class="hero-title">
+                    <span class="accent">Сучасна</span>пекарня
+                </h1>
+            </div>
+        </section>
+        <!--+ Advantages section -->
+        <section class="advantages-section">
+            <div class="container">
+                <h2 class="visually-hidden">Наші переваги</h2>
+                <ul class="advantages-list">
+                    <li class="advantages-item">Великий попит на ринку</li>
+                    <li class="advantages-item">Доступні за бюджетом формати</li>
+                    <li class="advantages-item">Досвідчена управлінська команда</li>
+                </ul>
+            </div>
         </section>
         <!--+ Traditions section -->
-        <section id="tradition-section">
-            <ul class="advantages-list">
-                <li class="advantages-item">Великий попит на ринку</li>
-                <li class="advantages-item">Доступні за бюджетом формати</li>
-                <li class="advantages-item">Досвідчена управлінська команда</li>
-            </ul>
-            <h2 class="section-title">Новий формат традицій</h2>
-            <p class="traditions-text">
-                <span class="brand uppercase">shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та натуральність інгредієнтів.
-            </p>
-            <p class="traditions-text">
-                Ми працюємо як найвідоміші мережі—
-                <span class="brand">5 хвилин і замовлення готове.</span>
-                А ще у наших пекарень стильний дизайн
-                та висока якість обслуговування!
-            </p>
-            <img src="./images/baker-man.jpg" alt="Чоловік пекар">
+        <section class="traditions-section section" id="traditions-section">
+            <div class="container">
+                <div class="traditions-container">
+                    <div class="traditions-content">
+                        <h2 class="traditions-title section-title">Новий формат традицій</h2>
+                        <p class="traditions-text">
+                            <span class="brand uppercase">shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та натуральність інгредієнтів.
+                        </p>
+                        <p class="traditions-text limited">
+                            Ми працюємо як найвідоміші мережі—<span class="brand">5 хвилин і замовлення готове.</span> А ще у наших пекарень стильний дизайн та висока якість обслуговування!
+                        </p>
+                    </div>
+                    <img src="./images/baker-man.jpg" alt="Чоловік пекар">
+                </div>
+            </div>
         </section>
         <!--+ Chefs section -->
-        <section id="chefs-section">
-            <h2 class="section-title">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
-            <ul>
-                <li>
-                    <article>
-                        <h3 class="chefs-title">Настя</h3>
-                        <p>Привіт, я Настя! </p>
-                        <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
-                        <p>Я випічу для васнайсмачніщі вироби!</p>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <h3 class="chefs-title">Влад</h3>
-                        <p>Привіт, я Влад!</p>
-                        <p>Мій кондитерський стаж вже 18 років. SHOP BEKERY - це наша любов, з якою ми ділимось кожен раз з Вами через нашу випічку!</p>
-                        <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
-                    </article>
-                </li>
-            </ul>
+        <section class="section" id="chefs-section">
+            <div class="container">
+                <h2 class="chefs-title section-title centered">Наші найкращі <span class="accent">шеф-кухарі</span>
+                </h2>
+                <ul>
+                    <li>
+                        <article>
+                            <img class="chef-photo" src="./images/nastya-chef.jpg" alt="Nastya chef">
+                            <h3 class="chef-title">Настя</h3>
+                            <p>Привіт, я Настя! </p>
+                            <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
+                            <p>Я випічу для васнайсмачніщі вироби!</p>
+                        </article>
+                    </li>
+                    <li>
+                        <article>
+                            <img class="chef-photo" src="./images/vlad-chef.jpg" alt="Vlad chef">
+                            <h3 class="chef-title">Влад</h3>
+                            <p>Привіт, я Влад!</p>
+                            <p>Мій кондитерський стаж вже 18 років. SHOP BEKERY - це наша любов, з якою ми ділимось кожен раз з Вами через нашу випічку!</p>
+                            <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+                        </article>
+                    </li>
+                </ul>
+            </div>
         </section>
         <!--+ Formats section -->
-        <section id="formats-section">
-            <h2 class="section-title">Формати</h2>
-            <ul>
-                <li>
-                    <article>
-                        <h3 class="format-title" lang="uk">Walrus</h3>
-                        <div class="format-text">
-                            <p>Площа: до 120 м2</p>
-                            <p>Меню: розширене меню</p>
-                            <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти-різнороби</p>
-                            <p>Посадкові місця: є</p>
-                        </div>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <h3 class="format-title" lang="uk">Horseshoe</h3>
-                        <div class="format-text">
-                            <p>Площа: до 25 м2</p>
-                            <p>Меню: найпопулярніші позиції меню</p>
-                            <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
-                            <p>Посадкові місця: відсутні</p>
-                        </div>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <h3 class="format-title" lang="uk">Handlebar</h3>
-                        <div class="format-text">
-                            <p>Площа: до 15 м2</p>
-                            <p>Меню: найпопулярніші позиції меню</p>
-                            <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
-                            <p>Посадкові місця: відсутні </p>
-                        </div>
-                    </article>
-                </li>
-            </ul>
+        <section class="section" id="formats-section">
+            <div class="container">
+                <h2 class="formats-title section-title centered">Формати</h2>
+                <button class="carousel-button" type="button">
+                    <svg class="carousel-arrow" width="16" height="16">
+                        <use href="./images/icons.svg#icon-arrow"></use>
+                    </svg>
+                </button>
+                <ul class="formats-list">
+                    <li class="formats-item">
+                        <article class="format-card">
+                            <h3 class="format-title" lang="uk">Walrus</h3>
+                            <div class="format-text">
+                                <p>Площа: до 120 м2</p>
+                                <p>Меню: розширене меню</p>
+                                <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти-різнороби</p>
+                                <p>Посадкові місця: є</p>
+                            </div>
+                        </article>
+                    </li>
+                    <li class="formats-item">
+                        <article class="format-card">
+                            <h3 class="format-title" lang="uk">Horseshoe</h3>
+                            <div class="format-text">
+                                <p>Площа: до 25 м2</p>
+                                <p>Меню: найпопулярніші позиції меню</p>
+                                <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                                <p>Посадкові місця: відсутні</p>
+                            </div>
+                        </article>
+                    </li>
+                    <li class="formats-item">
+                        <article class="format-card">
+                            <h3 class="format-title" lang="uk">Handlebar</h3>
+                            <div class="format-text">
+                                <p>Площа: до 15 м2</p>
+                                <p>Меню: найпопулярніші позиції меню</p>
+                                <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                                <p>Посадкові місця: відсутні </p>
+                            </div>
+                        </article>
+                    </li>
+                </ul>
+            </div>
         </section>
         <!--+ Contact-section -->
-        <section id="contact-section">
-            <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
-            <p>Заповни форму, щоб ми зв'язались з тобою!</p>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d635.0407286785055!2d30.4908517!3d50.4566909!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1698992627410!5m2!1sru!2sua"
-                width="603" height="595" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <section class="section" id="contact-section">
+            <div class="container">
+                <h2 class="contact-title section-title">Приєднуйся до мережі пекарень</h2>
+                <p>Заповни форму, щоб ми зв'язались з тобою!</p>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d635.0407286785055!2d30.4908517!3d50.4566909!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1698992627410!5m2!1sru!2sua"
+                    width="603" height="595" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </section>
     </main>
     <!--+ Footer -->
     <footer class="footer" id="footer">
-        <nav>
-            <a href="#">
-                <img src="./images/logo.svg" alt="Логотип сучасної пекарні">
-            </a>
-            <ul>
-                <li><a class="link" href="#">Наші традиції</a></li>
-                <li><a class="link" href="#">Шеф-кухарі</a></li>
-                <li><a class="link" href="#">Формати</a></li>
-                <li><a class="link" href="#">Контакти</a></li>
-            </ul>
-        </nav>
-        <address>
-            <ul>
-                <li>
-                    <a class="address-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a>
-                </li>
-                <li>
-                    <a class="address-link" href="http://mail:shopbakery@gmail.com">shopbakery@gmail.com</a>
-                </li>
-                <li>
-                    <a class="address-link" href="https://maps.app.goo.gl/bPc5MmLapzG13TuP6" target="_blank">Україна, м. Київ, вул. Січових Стрільців 54</a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="#" alt="facebook-icon">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="#" alt="instagram-icon">
-                    </a>
-                </li>
-            </ul>
-            <a class="address-link" href="#" target="_blank">Політика конфіденційності</a>
-            <p class="address-copyright">&copy; 2022 Дані захищені</p>
-        </address>
+        <div class="container">
+            <nav>
+                <a href="#">
+                    <img src="./images/logo.svg" alt="Логотип сучасної пекарні">
+                </a>
+                <ul>
+                    <li><a class="link" href="#">Наші традиції</a></li>
+                    <li><a class="link" href="#">Шеф-кухарі</a></li>
+                    <li><a class="link" href="#">Формати</a></li>
+                    <li><a class="link" href="#">Контакти</a></li>
+                </ul>
+            </nav>
+            <address>
+                <ul>
+                    <li>
+                        <a class="address-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a>
+                    </li>
+                    <li>
+                        <a class="address-link" href="http://mail:shopbakery@gmail.com">shopbakery@gmail.com</a>
+                    </li>
+                    <li>
+                        <a class="address-link" href="https://maps.app.goo.gl/bPc5MmLapzG13TuP6" target="_blank">Україна, м. Київ, вул. Січових Стрільців 54</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg class="address-icon" width="32" height="32">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg class="address-icon" width="32" height="32">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+                <a class="address-link" href="#" target="_blank">Політика конфіденційності</a>
+                <p class="address-copyright">&copy; 2022 Дані захищені</p>
+            </address>
+        </div>
     </footer>
 </body>
 
